{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 53,
  "lineage": "65e79573-b247-a66f-6ae7-765ee3b10a50",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043c8bf58351110a2",
            "domain": "vpc",
            "id": "eipalloc-043c8bf58351110a2",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-205-163-71.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.163.71",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-eip"
            },
            "tags_all": {
              "Name": "my-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654435037:internet-gateway/igw-021270b5c8deea20c",
            "id": "igw-021270b5c8deea20c",
            "owner_id": "654654435037",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-008284d2f2b9114d6"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654435037:route-table/rtb-0495ecc640eb31f2a",
            "id": "rtb-0495ecc640eb31f2a",
            "owner_id": "654654435037",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-021270b5c8deea20c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-pubrtb"
            },
            "tags_all": {
              "Name": "my-pubrtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-008284d2f2b9114d6"
          },
          "dependencies": [
            "aws_internet_gateway.igw-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prisub-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsub-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654435037:vpc/vpc-008284d2f2b9114d6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04940c72925d06629",
            "default_route_table_id": "rtb-0d20737f97cca1ed8",
            "default_security_group_id": "sg-076a92370e0b8217b",
            "dhcp_options_id": "dopt-05ff29c113a5a43b3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-008284d2f2b9114d6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d20737f97cca1ed8",
            "owner_id": "654654435037",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}